fix the overlapping of components when logged in -V

--- a/hr-react-app/src/Login.css
+++ b/hr-react-app/src/Login.css
@@ -28,7 +28,7 @@
   }
   
   .p-8 {
-    padding: 2rem;
+    padding: 4.5rem;
   }
   
   .space-y-6 {
